# rippingTUI

./: .gitignore  CMakeLists.txt  README.md  flake.nix
include/: disc_detector.h  handbrake_wrapper.h  makemkv_wrapper.h
include/ui/: main_ui.h
src/: disc_detector.cpp  handbrake_wrapper.cpp  main.cpp  makemkv_wrapper.cpp
src/ui/: main_ui.cpp
